--- a/auth/package.json
+++ b/auth/package.json
@@ -12,11 +12,15 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "express": "^5.1.0"
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
